--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4.4",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-sass": "~0.8.1"
   }
 }
