--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "jquery": "~2.1.1",
-    "imagesloaded": "~3.1.5",
-    "inside": "https://github.com/stewartknapman/inside.git"
+    "inside": "https://github.com/stewartknapman/inside.git",
+    "imagesloaded": "~3.1.8"
   }
 }
