--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "uniformThumbnails",
   "version": "0.0.1",
-  "main": "./dist/jquery.uniform_thumbnails.min.js",
+  "main": "./dist/jquery.uniform_thumbnails.pkgd.js",
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-sass": "~0.8.1"
+    "grunt-requirejs": "^0.4.2"
   },
   "dependencies": {
     "imagesloaded": "^3.1.8"
